--- a/travel/e1.1_color.md
+++ b/travel/e1.1_color.md
@@ -16,3 +16,12 @@ CIE XYZ, sRGB, NTSC, AdobeRGB,
 
 
 ## 色彩管理
+
+## 资源和引用
+
+* 颜色工具
+  * [色彩管理网](https://www.colortell.com/colortool)
+
+* [UE制作PBR材质攻略Part 1 - 色彩知识](https://www.cnblogs.com/timlly/p/11664635.html)
+
+* [白炽灯、节能灯、LED 灯等各种光源，哪种更适合阅读？](https://www.zhihu.com/question/20721949)
